--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
         <div class="weather-display">
             <div class="display-text">
                 <h3 class="city-name"></h3>
-                <h2 class="city-temp"></h2>
+                <div class="temp-container">
+                    <h2 class="city-temp"></h2>
+                    <div class="uom-toggle">
+                        <div class="uom-toggle--btn"></div>
+                    </div>
+                </div>  
             </div>
             <img class="weather-img" src="#" alt="">
         </div>
@@ -26,7 +31,6 @@
             <button class="city-submit-btn">Submit</button>
         </form>
     </div>
-    
     
     <script src="./index.js"></script>
 </body>
